--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - 3.5
+addons:
+  apt:
+    packages:
+      xmlsec1
 install: pip install -r requirements.txt
 script: ./manage.py test
