--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ before_script:
   - export SAML_KEY=`base64 -d <<< $SAML_KEY_B64`
   - export SAML_CERT=`base64 -d <<< $SAML_CERT_B64`
 install: pip install -r requirements.txt
-script: python -Wd ./manage.py test
+script: python -Wd `which coverage3` run ./manage.py test
+after_success: codeclimate-test-reporter
