--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 cffi==1.10.0
 contextlib2==0.5.5
+coverage>=4.0,<4.4
+codeclimate-test-reporter==0.2.3
 cryptography==2.0
 decorator==4.1.2
 dj-database-url==0.4.2
