Tests for Post Monthly View
also adds generic test mixin for monthly views

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -24,6 +24,9 @@ engines:
       threshold: "D"
   pep8:
     enabled: true
+    checks:
+      E701:
+        enabled: false
 ratings:
   paths:
   - "**.py"
