OAuth2 implementation in MI for ABC (#228)
* support for Oauth SSO.

* auth_url API for front-end to obtain ABC authorisation URL

* callback API for frontend to call, which gets bearer token, user profile and logs user into MI

* add feature flag for auth backend, to support both saml and oauth

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ zope.interface==4.4.2
 django-extended-choices==1.1.1
 openpyxl==2.4.8
 URLObject==2.4.3
+requests-oauthlib==0.8.0
 
 # Tests
 Faker==0.7.18
