Use subtests to check all simple single win scenarios
Using django subtests to check all scenarios for a single non_hvc win.

Checks for all won stages and all FDIValues

also introduces pytest-xdist to run tests in parallel

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ python:
   - 3.6
 services:
   - postgresql
+before_cache: mkdir -p .cache && cp .testmondata .cache/
 cache:
-  - pip
-  - packages
-
+  pip: true
+  packages: true
+  directories:
+    - .cache/
 addons:
   apt:
     packages:
@@ -18,6 +20,7 @@ before_script:
   - export SAML_CERT=`base64 -d <<< $SAML_CERT_B64`
   - psql -c 'create database test;' -U postgres
   - export DATABASE_URL=postgres://postgres@localhost/test
+  - cp .cache/.testmondata . | true
 install: pip install -r requirements.txt
-script: python -Wd `which coverage3` run --source=. ./manage.py test --failfast
+script: pytest --testmon --cov=. --cov-report xml --cov-report term-missing:skip-covered --tlf
 after_success: codeclimate-test-reporter
