Use default travis postgres db
this will provide a small speedup to tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,10 @@ services:
   - postgresql
 cache:
   pip: true
-  packages: true
 addons:
-  apt:
-    packages:
-      xmlsec1
   postgresql: "9.6"
 before_script:
-  - export SAML_KEY=`base64 -d <<< $SAML_KEY_B64`
-  - export SAML_CERT=`base64 -d <<< $SAML_CERT_B64`
-  - psql -c 'create database test;' -U postgres
-  - export DATABASE_URL=postgres://postgres@localhost/test
+  - export DATABASE_URL=postgres://travis@localhost/travis
 install: pip install -r requirements.txt
 script: pytest --cov=. --cov-report xml --cov-report term-missing:skip-covered -n 2
 after_success: codeclimate-test-reporter
