--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,9 @@ zipstream==1.1.4
 cytoolz==0.9.0.1
 django-trackstats==0.5.0
 
+# Development utilities
+ipython==6.4.0
+
 # Tests
 Faker==0.8.12
 factory-boy==2.10.0
