(feat) Activity stream endpoint for pen-testing
The is some duplication/similarity between this and endpoints in other
projects. The commonalities are _not_ factored out...

... Coupling them together slows independent developement of each. They are
already running different Python and Django versions, one Python project (the
Activity Stream itself) isn't using Django, and one service is Ruby (which
would be tricky to factor out!). The Activity Stream itself aready places a
(albeit/hopefully small!) burden on each project, and don't want this to be
made larger by requiring project developers to look and make changes in another
repository that potentially has to support multiple Python/Django versions...

... And it's not that much code. It is expected that there will be much more
project-specific code to query-for and generate the data. Or, there may be
other places that would be more useful to factor out. e.g. maybe a common
library for generating "activities" may be more useful. Or even some projects
may need different authentication mechanisms. This may be difficult if
factoring out small parts at an early stage.

--- a/.env.template
+++ b/.env.template
@@ -9,6 +9,10 @@ export DEBUG=True
 export API_DEBUG=True
 export DATABASE_URL='postgres://postgres@127.0.0.1:5432/export-wins-data'
 
+export ACTIVITY_STREAM_IP_WHITELIST='1.2.3.4'
+export ACTIVITY_STREAM_ACCESS_KEY_ID='some-id'
+export ACTIVITY_STREAM_SECRET_ACCESS_KEY='some-secret'
+
 #read only
 export AWS_KEY_CSV_READ_ONLY_ACCESS=aws-read-key
 export AWS_SECRET_CSV_READ_ONLY_ACCESS=aws-read-secret
