--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-filter==1.1.0
 djangorestframework==3.7.7
 factory-boy==2.10.0
 gunicorn==19.8.1
+mohawk==0.3.4
 psycopg2-binary==2.7.5
 python-dateutil==2.7.0
 whitenoise==3.3.1
