Add VCAP_SERVICES to .env.template

--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,7 @@ export EMAIL_PORT='1025'
 export DEBUG=True
 export API_DEBUG=True
 export DATABASE_URL='postgres://postgres@127.0.0.1:5432/export-wins-data'
+export VCAP_SERVICES='{"redis": [{"credentials": {"uri": "redis://127.0.0.1:7000/"}}]}'
 
 export ACTIVITY_STREAM_IP_WHITELIST='1.2.3.4'
 export ACTIVITY_STREAM_ACCESS_KEY_ID='some-id'
