--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ cytoolz==0.9.0.1
 django-trackstats==0.5.0
 django-redis==4.9.0
 redis-py-cluster==1.3.4
+python-json-logger==0.1.5
 
 # Development utilities
 ipython==6.5.0
