--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,11 @@ requests-oauthlib==0.8.0
 zipstream==1.1.4
 cytoolz==0.9.0.1
 django-trackstats==0.5.0
+
+redis==2.10.6
+redis-py-cluster==1.3.6
 django-redis==4.9.0
-redis-py-cluster==1.3.4
+
 python-json-logger==0.1.5
 
 # Development utilities
