--- a/.env.template
+++ b/.env.template
@@ -10,9 +10,9 @@ export API_DEBUG=True
 export DATABASE_URL='postgres://postgres@127.0.0.1:5432/export-wins-data'
 export VCAP_SERVICES='{"redis": [{"credentials": {"uri": "redis://127.0.0.1:7000/"}}]}'
 
-export ACTIVITY_STREAM_IP_WHITELIST='1.2.3.4'
-export ACTIVITY_STREAM_ACCESS_KEY_ID='some-id'
-export ACTIVITY_STREAM_SECRET_ACCESS_KEY='some-secret'
+export HAWK_IP_WHITELIST='1.2.3.4'
+export HAWK_ACCESS_KEY_ID='some-id'
+export HAWK_SECRET_ACCESS_KEY='some-secret'
 
 #read only
 export AWS_KEY_CSV_READ_ONLY_ACCESS=aws-read-key
