--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,16 @@ python-json-logger==0.1.5
 
 # Development utilities
 ipython==7.2.0
+
+# Tests
+Faker==1.0.0
+factory-boy==2.10.0
+raven==6.9.0
+freezegun==0.3.11
+jmespath==0.9.3
+pytest-cov==2.5.1
+pytest-xdist==1.22.5
+pytest==3.8.1
+pytest-django==3.4.4
+coverage-pth==0.0.2
+pytest-sugar==0.9.1
