Use python-dotenv for managing environment variables
Signed-off-by: Lukasz Lancucki <lukasz.lancucki@gmail.com>

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,7 @@ export EMAIL_HOST='127.0.0.1'
 export EMAIL_PORT='1025'
 export DEBUG=True
 export API_DEBUG=True
+export POSTGRES_DB='export-wins-data'
 export DATABASE_URL='postgres://postgres@127.0.0.1:5432/export-wins-data'
 export VCAP_SERVICES='{"redis": [{"credentials": {"uri": "redis://127.0.0.1:7000/"}}]}'
 
