--- a/requirements.txt
+++ b/requirements.txt
@@ -28,13 +28,13 @@ redis-py-cluster==1.3.6
 django-redis==4.9.0
 
 python-json-logger==0.1.5
+python-dotenv==0.10.5
 
 # Development utilities
 ipython==7.2.0
 
 # Tests
 Faker==1.0.0
-factory-boy==2.10.0
 raven==6.9.0
 freezegun==0.3.14
 jmespath==0.9.3
