Add Env templates

--- a/.env.template
+++ b/.env.template
@@ -15,6 +15,19 @@ export HAWK_IP_WHITELIST='1.2.3.4'
 export HAWK_ACCESS_KEY_ID='some-id'
 export HAWK_SECRET_ACCESS_KEY='some-secret'
 
+ACTIVITY_STREAM_ACCESS_KEY_ID=activity-stream-id
+ACTIVITY_STREAM_SECRET_ACCESS_KEY=activity-stream-key
+
+DATA_FLOW_API_ACCESS_KEY_ID=data-flow-api-id
+DATA_FLOW_API_SECRET_ACCESS_KEY=data-flow-api-key
+
+DATA_HUB_ACCESS_KEY_ID=data-hub-id
+DATA_HUB_SECRET_ACCESS_KEY=data-hub-key
+
+COMPANY_MATCHING_SERVICE_BASE_URL=https://company-matching-service
+COMPANY_MATCHING_HAWK_ID=company-match-id
+COMPANY_MATCHING_HAWK_KEY=company-match-key
+
 #read only
 export AWS_KEY_CSV_READ_ONLY_ACCESS=aws-read-key
 export AWS_SECRET_CSV_READ_ONLY_ACCESS=aws-read-secret
