--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ django-redis==4.10.0
 python-json-logger==0.1.5
 python-dotenv==0.10.5
 django-grappelli==2.13.3
+celery[redis]==4.4.2
 
 
 # Development utilities
