--- a/development.yml
+++ b/development.yml
@@ -17,6 +17,8 @@ services:
   postgres:
     image: postgres:10
     env_file: .env
+    volumes:
+      - "./postgres-data:/var/lib/postgresql/data"
     ports:
       - "5432:5432"
 
