--- a/.env.template
+++ b/.env.template
@@ -9,7 +9,7 @@ export DEBUG=True
 export API_DEBUG=True
 export POSTGRES_DB='export-wins-data'
 export DATABASE_URL='postgres://postgres@127.0.0.1:5432/export-wins-data'
-export VCAP_SERVICES='{"redis": [{"credentials": {"uri": "redis://127.0.0.1:7000/"}}]}'
+export VCAP_SERVICES='{"redis": [{"credentials": {"uri": "redis://127.0.0.1:7000/"} "name": "redis" }]}'
 
 export HAWK_IP_WHITELIST='1.2.3.4'
 export HAWK_ACCESS_KEY_ID='some-id'
