--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           DEBUG: True
           API_DEBUG: True
           DATABASE_URL: 'postgres://postgres@127.0.0.1:5432/export-wins-data'
-          VCAP_SERVICES: '{"redis": [{"credentials": {"uri": "redis://127.0.0.1:7000/"}}]}'
+          VCAP_SERVICES: '{"redis": [{"credentials": {"uri": "redis://127.0.0.1:7000/", "name": "redis"}}]}'
           HAWK_IP_WHITELIST: 1.2.3.4
           HAWK_ACCESS_KEY_ID: some-id
           HAWK_SECRET_ACCESS_KEY: some-secret
@@ -28,6 +28,7 @@ jobs:
           AWS_SECRET_CSV_READ_ONLY_ACCESS: aws-read-secret
           AWS_REGION_CSV: aws-region
           SESSION_COOKIE_SECURE: False
+          REDIS_SERVICE_NAME: 'redis'
       - image: postgres:10
         environment:
           POSTGRES_DB: export-wins-data
