Add update sector names command

--- a/.env.template
+++ b/.env.template
@@ -28,6 +28,11 @@ COMPANY_MATCHING_SERVICE_BASE_URL=https://company-matching-service
 COMPANY_MATCHING_HAWK_ID=company-match-id
 COMPANY_MATCHING_HAWK_KEY=company-match-key
 
+METADATA_AWS_ACCESS_KEY_ID=
+METADATA_AWS_SECRET_ACCESS_KEY=
+METADATA_BUCKET=
+METADATA_AWS_DEFAULT_REGION=
+
 #read only
 export AWS_KEY_CSV_READ_ONLY_ACCESS=aws-read-key
 export AWS_SECRET_CSV_READ_ONLY_ACCESS=aws-read-secret
