--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,7 @@ omit =
   **/migrations/*.py
   **/tests/*.py
   **/tests.py
+
+[tool:pytest]
+DJANGO_SETTINGS_MODULE = data.settings_test
+addopts = -p no:warnings
