--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ python-json-logger==0.1.5
 python-dotenv==0.10.5
 django-grappelli==2.13.3
 celery[redis]==4.4.2
+pyyaml==5.3.1
 
 
 # Development utilities
